Changing meta tags for better SEO

--- a/index.html
+++ b/index.html
@@ -4,8 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Gallery of Ellena" />
-    <title>ELLENA</title>
+    <meta
+      name="description"
+      content="Portfolio website showcasing beautiful paintings made by Ellena"
+    />
+    <meta
+      name="google-site-verification"
+      content="2uAQWqvBs9hQCunaWQTxDh9RX_hFDcBnhQbwukxxmyE"
+    />
+    <title>ELLENA ART GALLERY</title>
   </head>
   <body>
     <div id="root"></div>
